--- a/app/src/main/res/layout/row_inprogress_transactions.xml
+++ b/app/src/main/res/layout/row_inprogress_transactions.xml
@@ -86,21 +86,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/type_"
-            android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
         <TextView
             android:id="@+id/tvType"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
             android:text="@{data.type}"
+            android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
-            app:layout_constraintStart_toEndOf="@id/tvTypeL"
-            app:layout_constraintTop_toBottomOf="@id/tvName"
+            app:layout_constraintEnd_toStartOf="@+id/gdlCenter"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTypeL"
             tools:text="Lumpsum" />
 
         <android.support.constraint.Guideline
@@ -116,7 +115,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/nav_"
-            android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
             app:layout_constraintStart_toEndOf="@id/gdlCenter"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
@@ -125,15 +123,14 @@
             android:id="@+id/tvNAV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
             android:layout_marginEnd="@dimen/space_4"
             android:maxLines="2"
+            android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
             app:dprice="@{data.nav}"
             app:layout_constraintEnd_toStartOf="@id/gdlEnd"
-            app:layout_constraintStart_toEndOf="@id/tvNAVL"
-            app:layout_constraintTop_toBottomOf="@id/tvName"
+            app:layout_constraintStart_toEndOf="@id/gdlCenter"
+            app:layout_constraintTop_toBottomOf="@id/tvNAVL"
             tools:text="27.50" />
 
         <android.support.constraint.Guideline
@@ -149,9 +146,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/folio_no_"
-            android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
-            app:layout_constraintEnd_toStartOf="@id/tvFolioNo"
             app:layout_constraintStart_toEndOf="@id/gdlEnd"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
@@ -159,15 +154,13 @@
             android:id="@+id/tvFolioNo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
-            android:gravity="end"
             android:maxLines="2"
             android:text="@{data.folioNumber}"
+            android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tvFolioL"
-            app:layout_constraintTop_toBottomOf="@id/tvName"
+            app:layout_constraintStart_toEndOf="@id/gdlEnd"
+            app:layout_constraintTop_toBottomOf="@id/tvFolioL"
             tools:text="15874" />
 
         <TextView
@@ -176,24 +169,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/order_no_"
-            android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvTypeL" />
+            app:layout_constraintTop_toBottomOf="@id/tvType" />
 
         <TextView
             android:id="@+id/tvOrderNo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
             android:layout_marginEnd="@dimen/space_4"
             android:maxLines="2"
             android:text="@{data.orderNumber}"
+            android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
-            app:layout_constraintEnd_toStartOf="@id/gdlCenter"
             app:layout_constraintStart_toEndOf="@+id/tvOrderNoL"
-            app:layout_constraintTop_toBottomOf="@id/tvTypeL"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderNoL"
             tools:text="#15874" />
 
         <TextView
@@ -202,23 +193,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/order_type_"
-            android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
             app:layout_constraintStart_toEndOf="@id/gdlCenter"
-            app:layout_constraintTop_toBottomOf="@id/tvNAVL" />
+            app:layout_constraintTop_toBottomOf="@id/tvNAV" />
 
         <TextView
             android:id="@+id/tvOrderType"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
             android:maxLines="2"
             android:text="@{data.orderType}"
+            android:textColor="@color/black"
             android:textSize="@dimen/_9ssp"
             app:layout_constraintEnd_toStartOf="@id/gdlEnd"
-            app:layout_constraintStart_toEndOf="@id/tvOrderTypeL"
-            app:layout_constraintTop_toBottomOf="@id/tvNAVL"
+            app:layout_constraintStart_toEndOf="@id/gdlCenter"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderTypeL"
             tools:text="Purchase" />
 
         <View
@@ -231,7 +220,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvOrderNo"
-            tools:visibility="gone" />
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/tvStateL"
@@ -241,13 +230,11 @@
             android:layout_marginBottom="@dimen/space_16"
             android:text="@string/status_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/black"
             android:visibility="@{statusVisibility}"
             app:layout_constraintBaseline_toBaselineOf="@id/tvState"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mDivider1"
-            tools:visibility="gone" />
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/tvState"
@@ -259,13 +246,12 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@{data.textColorRes}"
             android:visibility="@{statusVisibility}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvStateL"
             app:layout_constraintTop_toBottomOf="@id/mDivider1"
             tools:text="@string/in_progress"
             tools:textColor="@color/pdlg_color_green"
-            tools:visibility="gone" />
+            tools:visibility="visible" />
 
         <net.cachapa.expandablelayout.ExpandableLayout
             android:id="@+id/expStatus"
@@ -275,7 +261,7 @@
             app:el_duration="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mDivider1">
+            app:layout_constraintTop_toBottomOf="@id/tvState">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvTransactionStatus"
