--- a/app/src/main/res/layout/row_unpaid_transactions.xml
+++ b/app/src/main/res/layout/row_unpaid_transactions.xml
@@ -75,21 +75,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/type_"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/black"
+            android:textSize="@dimen/_9ssp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
         <TextView
             android:id="@+id/tvType"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
+            android:layout_marginEnd="8dp"
             android:text="@{data.type}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintStart_toEndOf="@id/tvTypeL"
-            app:layout_constraintTop_toBottomOf="@id/tvName"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_9ssp"
+            app:layout_constraintEnd_toStartOf="@+id/gdlCenter"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTypeL"
             tools:text="Lumpsum" />
 
         <android.support.constraint.Guideline
@@ -105,21 +105,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/nav_"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/black"
+            android:textSize="@dimen/_9ssp"
             app:layout_constraintStart_toEndOf="@id/gdlCenter"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
         <TextView
             android:id="@+id/tvNAV"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:layout_marginEnd="@dimen/space_4"
+            android:maxLines="2"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_9ssp"
             app:dprice="@{data.nav}"
-            app:layout_constraintStart_toEndOf="@id/tvNAVL"
-            app:layout_constraintTop_toBottomOf="@id/tvName"
+            app:layout_constraintEnd_toStartOf="@id/gdlEnd"
+            app:layout_constraintStart_toEndOf="@id/gdlCenter"
+            app:layout_constraintTop_toBottomOf="@id/tvNAVL"
             tools:text="27.50" />
 
         <android.support.constraint.Guideline
@@ -135,9 +136,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/folio_no_"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toStartOf="@id/tvFolioNo"
+            android:textSize="@dimen/_9ssp"
             app:layout_constraintStart_toEndOf="@id/gdlEnd"
             app:layout_constraintTop_toBottomOf="@id/tvName" />
 
@@ -145,16 +144,14 @@
             android:id="@+id/tvFolioNo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/space_4"
-            android:layout_marginTop="@dimen/space_16"
-            android:gravity="end"
+            android:maxLines="2"
             android:text="@{data.folioNumber}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_9ssp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tvFolioL"
-            app:layout_constraintTop_toBottomOf="@id/tvName"
+            app:layout_constraintStart_toEndOf="@id/gdlEnd"
+            app:layout_constraintTop_toBottomOf="@id/tvFolioL"
             tools:text="15874" />
-
 
         <TextView
             android:id="@+id/tvOrderNoL"
@@ -163,20 +160,20 @@
             android:layout_marginTop="@dimen/space_16"
             android:text="@string/order_no_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/black"
-            app:layout_constraintBaseline_toBaselineOf="@id/btnPayNow"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvFolioNo" />
 
         <TextView
             android:id="@+id/tvOrderNo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="@dimen/space_16"
+            android:layout_marginEnd="4dp"
             android:text="@{data.orderNumber}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintBaseline_toBaselineOf="@id/btnPayNow"
-            app:layout_constraintStart_toEndOf="@+id/tvOrderNoL"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toStartOf="@+id/gdlCenter"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderNoL"
             tools:text="#15874" />
 
         <TextView
@@ -205,7 +202,7 @@
             android:visibility="@{statusVisibility}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnPayNow"
+            app:layout_constraintTop_toBottomOf="@id/tvOrderNo"
             tools:visibility="gone" />
 
         <TextView
@@ -216,7 +213,6 @@
             android:layout_marginBottom="@dimen/space_16"
             android:text="@string/status_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@color/black"
             android:visibility="@{statusVisibility}"
             app:layout_constraintBaseline_toBaselineOf="@id/tvState"
             app:layout_constraintBottom_toBottomOf="parent"
