--- a/app/src/main/res/layout/row_goal_based_investment_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_list_item.xml
@@ -65,7 +65,7 @@
         <TextView
             android:id="@+id/tvDayChangeL"
             android:layout_width="wrap_content"
-            android:layout_height="14dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
             android:text="@string/current_value_"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
-            android:text="@string/xirr_"
+            android:text="@{investment.xirrLabel}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tvDayChangeL"
