--- a/app/src/main/res/layout/fragment_portfolio_details.xml
+++ b/app/src/main/res/layout/fragment_portfolio_details.xml
@@ -23,12 +23,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/default_space">
+            android:layout_marginTop="@dimen/space_16"
+            android:orientation="vertical">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_16"
+                android:layout_marginEnd="@dimen/space_16"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
                 android:padding="@dimen/space_8">
@@ -149,7 +151,10 @@
                 android:id="@+id/rvPortfolioFunds"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/space_16"
+                android:layout_marginBottom="@dimen/space_16"
                 android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/space_16"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
                 android:paddingStart="@dimen/space_8"
