--- a/app/src/main/res/layout/row_direct_investment_list_item.xml
+++ b/app/src/main/res/layout/row_direct_investment_list_item.xml
@@ -148,7 +148,7 @@
         <TextView
             android:id="@+id/tvDayChangeL"
             android:layout_width="wrap_content"
-            android:layout_height="14dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
             android:layout_marginEnd="8dp"
             android:text="@string/current_value_"
@@ -176,7 +176,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="@dimen/space_8"
-            android:text="@string/xirr_"
+            android:text="@{investment.xirrLabel}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
