--- a/app/src/main/res/layout/fragment_bank_mandate_form.xml
+++ b/app/src/main/res/layout/fragment_bank_mandate_form.xml
@@ -58,6 +58,7 @@
                     android:background="@drawable/shape_btn_idle_bg"
                     android:fontFamily="@font/lato_bold"
                     android:text="@string/txtcontinue"
+                    android:visibility="gone"
                     android:textColor="@color/white"
                     tools:text="@string/add_new_bank_account" />
 
